@@ -15,6 +15,7 @@ New Features:
 - Created ICY / NSV streaming plug-in
 - Created Authentication plug-in supporting FMS and Red5 authentication routines
 - Created Administration plug-in based on the admin demo
+- Added native RTMPS support
 
 Bugfixes:
 - Fixed bug with recording, where meta files were not removed when using the same name
